# ShiroiEngine

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindGFlags.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake  FindGLOG.cmake  FindLibCLang.cmake  FindTinyObjLoader.cmake  ShiroiEngine.cmake
dummy/: CMakeLists.txt  main.cpp
editor/: CMakeLists.txt
editor/include/kuroi/ui/: dock.h  editor_service.h
editor/src/kuroi/: main.cpp
engine/: CMakeLists.txt
engine/common/: CMakeLists.txt
engine/common/include/: types.h
engine/core/: CMakeLists.txt
engine/core/include/: types.h
engine/core/include/application/: application.h
engine/core/include/graphics/: graphics_context.h  material.h  mesh.h  rendering.h
engine/core/include/graphics/buffers/: opengl_buffer.h  vertex_array.h  vertex_buffer.h
engine/core/include/graphics/shaders/: shader_program.h
engine/core/include/maths/: angles.h
engine/core/include/scenes/: scene.h
engine/core/include/scenes/objects/: camera.h  static_mesh.h
engine/core/include/serialization/: annotation_macros.h  serialized_object.h
engine/core/include/services/: service.h  service_manager.h
engine/core/include/services/builtin/: embed_shapes.h
engine/core/include/utility/: collection_utilities.h  debug_utility.h  embed_shapes.h  event.h  file_utility.h  graphic_utilities.h  references.h  step_function.h  string_utility.h
engine/core/resources/shaders/: stdvertex.vs
engine/core/src/application/: application.cpp
engine/core/src/graphics/: graphics_context.cpp  material.cpp  mesh.cpp  rendering.cpp
engine/core/src/graphics/buffers/: verter_array.cpp  vertex_buffer.cpp
engine/core/src/graphics/utility/: graphic_utilities.cpp
engine/core/src/scenes/: scene.cpp
engine/core/src/scenes/objects/: camera.cpp  static_mesh.cpp
engine/core/src/services/: service.cpp  service_manager.cpp
engine/core/src/services/builtin/: embed_shapes.cpp
engine/core/src/utility/: embed_shapes.cpp  file_utility.cpp  graphic_utilities.cpp  step_function.cpp  string_utility.cpp
engine/jen/: CMakeLists.txt
engine/jen/include/: parser.h
engine/jen/include/jen/: generator.h  queued_class.h  serialization_generator.h
engine/jen/include/jen/generation/: cxxgenerator.h  generated_source.h
engine/jen/include/jen/reflection/: cxxclass.h  cxxcore.h  cxxmacros.h  cxxmethod.h  cxxparser.h  cxxprimitives.h
engine/jen/include/jen/utility/: clang_utility.h  generated_scope.h
engine/jen/src/: generator.cpp  jen.cpp  parser.cpp
engine/jen/src/jen/: generator.cpp  queued_class.cpp  serialization_generator.cpp
engine/jen/src/jen/generation/: generated_source.cpp  generation_context.cpp  serialization_generator.cpp
engine/jen/src/jen/reflection/: cxxclass.cpp  cxxmacros.cpp  cxxparser.cpp
engine/jen/src/jen/utility/: clang_utility.cpp  generated_scope.cpp
engine/scenes/: CMakeLists.txt
engine/scenes/include/scenes/: scene.h
engine/scenes/include/scenes/objects/: camera.h  static_mesh.h
engine/scenes/src/scenes/: scene.cpp
engine/scenes/src/scenes/objects/: camera.cpp  controller.cpp  static_mesh.cpp
engine/ui/: CMakeLists.txt
engine/ui/include/shiroi/ui/: panel.h  rect.h
engine/ui/src/shiroi/ui/: rect.cpp
scripts/: generateGLEW.bat
tools/: embed_resource.cmake.in
